2006-08-18  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/SiPix-Pocket_Printer_A6.xml: Fixed model name.

2006-08-18  George Liu <george.liu@ussj.ricoh.com>

	* Added 66 Postscript PPD file and 54 pxlmono PPD file for 66 printer models.
	* Updated Postscript.xml, pxlmono.xml and pxlcolor.xml.
         
            added:
            db/source/PPD/Gestetner/PS/Gestetner-C7526dn_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-C7531dn_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MP1100_DSm7110_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MP1350_DSm7135_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MP5500_DSm755_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MP6500_DSm765_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MP7500_DSm775_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MP9000_DSm790_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MPC1500_GS106_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MPC2500_DSc525_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MPC3000_DSc530_PS.ppd
            db/source/PPD/Gestetner/PXL/Gestetner-MP1100_DSm7110_PXL.ppd
            db/source/PPD/Gestetner/PXL/Gestetner-MP1350_DSm7135_PXL.ppd
            db/source/PPD/Gestetner/PXL/Gestetner-MP5500_DSm755_PXL.ppd
            db/source/PPD/Gestetner/PXL/Gestetner-MP6500_DSm765_PXL.ppd
            db/source/PPD/Gestetner/PXL/Gestetner-MP7500_DSm775_PXL.ppd
            db/source/PPD/Gestetner/PXL/Gestetner-MP9000_DSm790_PXL.ppd
            db/source/PPD/Gestetner/PXL/Gestetner-MPC1500_GS106_PXL.ppd
            db/source/PPD/Gestetner/PXL/Gestetner-MPC2500_DSc525_PXL.ppd
            db/source/PPD/Gestetner/PXL/Gestetner-MPC3000_DSc530_PXL.ppd
            db/source/PPD/Infotec/PS/Infotec-IPC_2525DN_PS.ppd
            db/source/PPD/Infotec/PS/Infotec-IPC_3030DN_PS.ppd
            db/source/PPD/Infotec/PS/Infotec-ISC_2525_PS.ppd
            db/source/PPD/Infotec/PS/Infotec-ISC_3030_PS.ppd