@@ -2172,6 +2172,16 @@
       <id>printer/Samsung-ML-2152WPS</id>
     </printer>
     <printer>
+      <id>printer/Samsung-ML-2250</id>
+      <comments>
+        <en>This printer has a DIMM expansion slot which can take a POSTSCRIPT 3 Emulator ROM. The ROM can be purchased online relatively cheaply (~65 Euro 18.08.2006). Its part number is ML-00PD. An example source www.csv.de.&lt;p&gt;
+
+Once the module is installed the postscript drivers can be used.&lt;p&gt;
+
+The printer&apos;s memory can also be upgraded up to 144MB. This is also a DIMM module. The Samsung branded memory is rather expensive (500+ euro), a generic memory does the same job with out trouble. A 128MB generic memory module can be found for around ~65 Euro (10.04.2006) from for example best-electronics on ebay.de</en>
+      </comments>
+    </printer>
+    <printer>
       <id>printer/Samsung-ML-2550</id>
     </printer>
     <printer>
