@@ -92,7 +92,55 @@
    <id>printer/Samsung-ML-1510</id>
   </printer>
   <printer>
+   <id>printer/Samsung-ML-1520</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-1610</id>
+      <comments>
+        <en>
+
+	  Using Ubuntu it seems to work when choosing the ML-1510
+	  printer in CUPS, but in OOo sometimes the left &amp; top
+	  margins aren&apos;t right.&lt;p&gt;
+
+	  &lt;em&gt;Comment on the previous statement:&lt;/em&gt;
+	  There&apos;s no need to use the driver for the ML-1510, as
+	  Samsung offers an own driver for the ML-1610.
+
+	</en>
+      </comments>
+  </printer>
+  <printer>
    <id>printer/Samsung-ML-1710</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-1740</id>
+      <comments>
+        <en>
+
+	  For the ghostscript GDI driver and ML-1710 PPD:&lt;p&gt;
+
+          * Portrait printing is slightly off-center&lt;p&gt;
+          * Landscape printing does not work correctly; only half the
+            page is printed, and it is offset ~50% up the page.&lt;p&gt;
+
+        </en>
+      </comments>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-1750</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-2010</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-2150</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-2250</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-2550</id>
   </printer>
   <printer>
    <id>printer/Samsung-ML-4500</id><!-- Samsung ML-4500 -->
