@@ -738,6 +738,12 @@
    <id>printer/Samsung-ML-2152WPS</id>
   </printer>
   <printer>
+   <id>printer/Samsung-ML-2250</id>
+      <comments>
+        <en>The Foomatic/ljet4 driver works with this printer. One can use the PPD File for the ML-2552W. Only 600 dpi is supported and the lighter printing tones are not visible.</en>
+      </comments>
+  </printer>
+  <printer>
    <id>printer/Samsung-ML-2550</id>
   </printer>
   <printer>
