@@ -1151,6 +1151,12 @@ HP2100M worked fine (i.e. no need to compile IEEE1284 into your kernel).</en>
       <id>printer/Samsung-ML-2152WPS</id>
     </printer>
     <printer>
+      <id>printer/Samsung-ML-2250</id>
+      <comments>
+        <en>The Foomatic/pxlmono driver works with this printer. One can use the PPD File for the ML-2552W</en>
+      </comments>
+    </printer>
+    <printer>
       <id>printer/Samsung-ML-2550</id>
     </printer>
     <printer>
