@@ -1,0 +1,60 @@
+<driver id="driver/splix">
+ <name>splix</name>
+ <url>http://splix.ap2c.org/</url>
+ <execution>
+  <filter />
+  <prototype></prototype>
+ </execution>
+ <comments>
+  <en>
+
+    SpliX is a set of CUPS printer drivers for SPL (Samsung Printer
+    Language) printers. If you have such a printer, you need to
+    download and use SpliX. Moreover you will find documentations
+    about this proprietary language.&lt;p&gt;
+
+    Note that only SPL2 printers are currently supported! However we
+    are looking for people who have a SPL printer to implement it as
+    soon as possible.&lt;p&gt;
+
+    Not all SPL2 printers are tested with this driver. Please report
+    your experience here.&lt;p&gt;
+
+    As the PPD files are contained in the driver package we will not
+    provide PPD files here on linuxprinting.org.&lt;p&gt;
+
+  </en>
+ </comments>
+ <printers>
+  <printer>
+   <id>printer/Samsung-ML-1510</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-1520</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-1610</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-1710</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-1740</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-1750</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-2010</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-2150</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-2250</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-2550</id>
+  </printer>
+ </printers>
+</driver>
