@@ -27,7 +27,7 @@
     </general>
   </autodetect>
   <functionality>A</functionality>
-  <driver>gdi</driver>
+  <driver>splix</driver>
   <!--no "contrib_url"-->
   <comments>
     <en>
