@@ -1,0 +1,68 @@
+<printer id="printer/Samsung-ML-1610">
+  <make>Samsung</make>
+  <model>ML-1610</model>
+  <mechanism>
+    <laser />
+    <!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>Single toner cartridge / 2,000 pages (ships with 1,000-page starter toner cartridge)</en>
+      </comments>
+      <!--one or more "partno" elements-->
+    </consumables>
+  </mechanism>
+  <url>http://www.samsung.com/Products/PrinterandMultifunction/BlackWhiteLaserPrintersforHomeandHomeOffice/ML_1610XAA.asp</url>
+  <lang>
+    <postscript level="3">
+      <!--no URL for manufacturer's "ppd" file-->
+    </postscript>
+    <proprietary />
+  </lang>
+  <autodetect>
+    <usb>
+      <ieee1284>MFG:Samsung;CMD:GDI;MDL:ML-1610;CLS:PRINTER;MODE:GDI;STATUS:IDLE;</ieee1284>
+      <manufacturer>Samsung</manufacturer>
+      <model>ML-1610</model>
+      <commandset>GDI</commandset>
+    </usb>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>splix</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    User comment:&lt;p&gt;
+
+    Samsung also has a driver &lt;a href=&quot;http://www.samsung.com/support/productsupport/download/FileView.aspx?cttfileid=303020&amp;type=Printer+and+Multifunction&amp;typecode=&amp;subtype=Black+%26+White+Laser+Printers+for+Home+and+Home+Office&amp;subtypecode=&amp;cmssubtypecode=&amp;model=ML-1610/XAA&amp;filetype=DR&amp;language=&amp;LSSI=/include/SSI/us_left/LMenu_PrinterandMultifunction_BlackWhiteLaserPrintersforHomeandHomeOffice.sec&amp;RSSI=/include/SSI/us_right/RMenu_PrinterandMultifunction.sec&quot;&gt; here&lt;/a&gt; which I didn&apos;t try yet.
+&lt;p&gt;
+
+===&lt;br&gt;
+A report on using the Samsung driver and installing this printer on Slackware.&lt;p&gt;
+
+&lt;a href=&quot;http://www.linuxpackages.net/forum/viewtopic.php?t=15246&quot;&gt;http://www.linuxpackages.net/forum/viewtopic.php?t=15246&lt;/a&gt;&lt;p&gt;
+
+It works perfectly fine, although there is a peculiar &apos;error&apos; logging in /var/log/cups/error_log - &apos;media tray empty!&apos; after every print job, but it doesn&apos;t seem to affect the printer (or CUPS) at all.&lt;p&gt;
+The &apos;media try empty&apos; error message is a bug in CUPS, and is fixed from:&lt;p&gt;
+
+CHANGES IN CUPS V1.1.21rc1
+        - The USB backend incorrectly reported &quot;media tray
+          empty&quot; (STR #660)
+&lt;br&gt;===&lt;p&gt;
+
+&lt;em&gt;My experience on Gentoo:&lt;/em&gt;
+Samsung offers an tar.gz package, which contains a GUI installer. The installation is quick and flawlessly. You can use CUPS or LPRng as backend. The installer also offers to install a printer management GUI and to integrate that with KDE/Gnome. (This GUI seems to be able to manage other CUPS printers, too; I didn&apos;t try that, however.)&lt;p&gt;
+
+The driver package also contains a set of .ppd files among which is one for the ML-1610, appearently for PS Level 3.&lt;p&gt;
+
+As the installation went smooth and the printer works fine, I&apos;m setting the status to &quot;Perfectly&quot;.&lt;p&gt;
+
+</en>
+  </comments>
+</printer>
