@@ -28,7 +28,7 @@
     </usb>
   </autodetect>
   <functionality>A</functionality>
-  <driver>gdi</driver>
+  <driver>splix</driver>
   <!--no "contrib_url"-->
   <comments>
     <en>
