@@ -1,0 +1,39 @@
+<printer id="printer/Samsung-ML-1740">
+  <make>Samsung</make>
+  <model>ML-1740</model>
+  <mechanism>
+    <laser />
+    <!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>toner cartridge (3,000 pages, ~$70 US)</en>
+      </comments>
+      <!--one or more "partno" elements-->
+    </consumables>
+  </mechanism>
+  <url>http://www.samsung.com/Products/PrinterandMultifunction/DiscontinuedProducts/ML_1740XAA.asp</url>
+  <lang>
+    <proprietary />
+  </lang>
+  <autodetect>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>splix</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>1) A Linux driver is included on the CD that comes with the printer, or it can be downloaded from Samsung.&lt;p&gt;
+
+Get the Linux driver package (one package for all models from &lt;a href=&quot;http://www.samsung.com/&quot;&gt;Samsung's web site&lt;/a&gt;.&lt;p&gt;
+
+Note: You cannot just use the PPD coming with Samsungs&apos;s driver package with CUPS/GhostScript.  You must also install the proprietary Samsung driver applications, as well as the PPD.&lt;p&gt;
+
+2) Or, you can try using the configuration for the Samsung ML-1710 printer, which several users have reported to work (see information page for that printer).&lt;p&gt;  Please see the comments in the GDI driver section below re issues with landscape printing.&lt;p&gt;
+</en>
+  </comments>
+</printer>
