@@ -1,0 +1,50 @@
+<printer id="printer/Samsung-ML-2010">
+  <make>Samsung</make>
+  <model>ML-2010</model>
+  <mechanism>
+    <laser />
+    <!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>cartridge CA$ 90</en>
+      </comments>
+      <!--one or more "partno" elements-->
+    </consumables>
+  </mechanism>
+  <url>http://www.samsung.com/</url>
+  <lang>
+    <proprietary />
+  </lang>
+  <autodetect>
+    <usb>
+      <ieee1284>MFG:Samsung;CMD:GDI;MDL:ML-2010;CLS:PRINTER;STATUS:BUSY;</ieee1284>
+    </usb>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>splix</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    One user reported that the driver downloaded from the Samsung web
+    site makes this printer working perfectly out of the box on Fedora
+    Core 5.&lt;p&gt;
+
+    Another user reported that once the (Samsung) driver is installed
+    with a lot of pain, it fails to communicate properly with CUPS. It
+    is just a frustrating experience. He returned the printer to the
+    store, after the Samsung technical support told on the phone that
+    they do not support Linux anyway.&lt;p&gt;
+
+    The user H.Samm reported that his printer worked out of the
+    box... so far his experience has been a very good one.&lt;p&gt;
+
+   </en>
+  </comments>
+</printer>
