@@ -1,3 +1,15 @@
+2006-09-05  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Samsung-ML-1520.xml, printer/Samsung-ML-1610.xml,
+	  printer/Samsung-ML-1740.xml, printer/Samsung-ML-2010.xml,
+	  printer/Samsung-ML-2250.xml: New printers from user contributions.
+
+	* driver/splix.xml, printer/Samsung-ML-1510.xml,
+	  printer/Samsung-ML-1710.xml: New Samsung SPL2 driver "splix".
+
+	* driver/gdi.xml, driver/Postscript.xml, driver/pxlmono.xml,
+	  driver/ljet4.xml, driver/ljet4d.xml: Added new Samsung printers.
+
 2006-08-18  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/SiPix-Pocket_Printer_A6.xml: Fixed model name.
